@startuml DomainModel

package "Common" {
    class Money <<ValueObject>>
    class Address <<ValueObject>>
    class Email <<ValueObject>>
}

package "UserAggregate" {
    class User <<Root>> {
      +userId: UUID
    }

    enum Role <<ValueObject>> {
      MANAGER,
      CUSTOMER,
      CARRIER
    }

    User --> Email
    User --> Role
}

package "CustomerAggregate" {

    class Customer <<Entity>> {
      +customerId: UUID
    }

    class NIF <<ValueObject>>

    class Name <<ValueObject>>
    
    Customer --> NIF
    Customer --> Name
    Customer "1" --> "1" User : has
    Customer "1" --> "1..*" Address : delivery addresses
}

package "CategoryAggregate" {
    class Category <<Root>>
}

package "ProductAggregate" {
    class Product <<Root>>
    Product "*" --> "1" Category
    Product "1" --> "1" Money
}

package "CartAggregate" {
    class Cart <<Root>> {
      +userId: UUID
    }

    class CartItem <<Entity>> {
      +productId: UUID
    }

    Cart --> CartItem
    CartItem "1" --> "1" Product : has
}

package "OrderAggregate" {
    class Order <<Root>> {
      +userId: UUID
    }

    class OrderItem <<Entity>> {
      +productId: UUID
    }

    enum OrderStatus <<ValueObject>>

    Order --> OrderItem
    Order --> OrderStatus
    Order "1" --> "1" Money
    OrderItem "1" --> "1" Money
    Order "1" --> "1" Address : delivery address
}

User "1" --> "0..1" Cart : owns
User "1" --> "0..*" Order : places

@enduml